fixed css by adding a gap of 10px in card headline and desc

--- a/frontend/src/stylesheets/ui.css
+++ b/frontend/src/stylesheets/ui.css
@@ -190,3 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 .nav-active {
   font-weight: bold;
 }
+
+.card-text {
+  margin-top: 10px;
+}
